$Id$

NOTE: This is the 1.3.X development branch.  Put code changes right
below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - Patch [ 2873491 ] Get rid of PHP 5.3 deprecated features
 - Example of a good table summary="" in function display_month
 - Patch [ 2534090 ] PHP 5.2.8/Seg fault/blank page/Internal Server Error/untimed
 - Patch [ 2477178 ] New french translation
 - Patch [ 2269623 ] Configure default client timezone
 - Patch [ 2393257 ] Reset reminder upon event update
 - Patch [ 2261885 ] Missing shebang
 - Patch [ 2261841 ] Fix timebar views
 - Fixed bug: The remember login checkbox on login page would not work
   unless register globals was enabled
 - Fixed bug [ 2157160 ] in week selector wrong weeks
 - Fixed bug [ 2148435 ] Not possible to create/edit layer with duplicates=No
 - Delete translate phrases that are no longer used from code.
 - Patch [ 2135609 ] Date issues for repeating events in RSS feed
 - Fixed bug [ 2163504 ] usersel.php was not running "register_globals = off".
 - Fixed bug [ 2142564 ] rss_activity_log.php doesn't work with Oracle
 - Apply Patch [ 2163740 ] I made more i18n patches. (with some modifications.)
 - Fixed bug [ 2135644 ] mb_language error in 1.2.0 prevent login
 - Apply Patch [ 2086918 ] icalendar with multi byte
 - Apply Patch [ 2129844 ] Missing space in day view
 - Apply Patch [ 2126058 ] Color for today's event in week.php
 - Apply Patch [ 2126269 ] Norwegian translation update
 - Apply Patch [ 2117687 ] German updated translation
 - Apply Patch [ 2126001 ] Fixes for upgrade-postgres.sql
 - Add Portuguese_BR_utf8 to includes/translate.php
 - Fix typo. Bug report [2122876] syntax error at "update_translation.pl" update_translation.pl
 - Patch [ 1986759 ] Incorrect date shift logic in view_entry.php
 - Fixed NUC URL in edit_nonusers.php. Removed hyperlink and added _NUC_
 - Fixed problem with ByMonthDay not being saved
 - Fixed bug [ 1948133 ] Weekly repeating events appear on wrong day in iCal