@@ -4,6 +4,7 @@ NOTE: This is the 1.3.X development branch.  Put code changes right
 below the 1.3.0+CVS label below.
 
 Version 1.3.0+CVS (?? ??? 2007)
+ - Patch [ 2840937 ] Better error reporting for Oracle support in dbi4php.php
  - Patch [ 2873491 ] Get rid of PHP 5.3 deprecated features
  - Example of a good table summary="" in function display_month
  - Patch [ 2534090 ] PHP 5.2.8/Seg fault/blank page/Internal Server Error/untimed
